--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,7 +116,7 @@ workflows:
       - deploy:
           name: deploy-production
           requires:
-            - build
+            - build-production
           filters:
             branches:
               only: main
