--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,5 +115,7 @@ workflows:
           filters:
             branches:
               only: production
-          s3-uri: s3://marketing-website-assets-905418149376
-          cloudfront-distribution-id: E2KP9J5JTG1DGX
+          s3-uri: s3://marketing-website-assets-905418149376-stg
+          cloudfront-distribution-id: E1DEC4PZRVMULZ
+          # s3-uri: s3://marketing-website-assets-905418149376
+          # cloudfront-distribution-id: E2KP9J5JTG1DGX
