--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,14 +98,14 @@ workflows:
           name: deploy-cms-schema-update
           filters:
             branches:
-              only: main
+              only: test-build-deploy
       - build:
           name: build-staging
           requires:
             - deploy-cms-schema-update
           filters:
             branches:
-              only: main
+              only: test-build-deploy
           env: staging
           is_indexing_allowed: false
           is_local_cms_data_enabled: false
@@ -123,7 +123,7 @@ workflows:
             - build-staging
           filters:
             branches:
-              only: main # TODO: update this to "test-build-deploy" branch to test
+              only: test-build-deploy # TODO: update this to "test-build-deploy" branch to test
           s3-uri: s3://marketing-website-assets-905418149376-stg
           cloudfront-distribution-id: E1DEC4PZRVMULZ
       # - deploy:
