--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ orbs:
 jobs:
   deploy-cms:
     docker:
-      - image: cimg/base:stable
+      - image: cimg/node:21.1.0
     steps:
       - checkout
       - node/install-packages:
