--- a/www/package.json
+++ b/www/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NEXT_PUBLIC_ENV=development next dev",
+    "start": "next start",
     "build": "next build",
     "build:analyze": "ANALYZE=true next build",
-    "build:static": "STATIC_BUILD=true next build && next-sitemap && esno scripts/copyMissingBContent.ts",
-    "start": "next start",
+    "build:static": "NEXT_PUBLIC_STATIC_BUILD=true next build && next-sitemap && esno scripts/copyMissingBContent.ts",
     "lint": "next lint",
     "test:all": "yarn test:prettier && yarn test:types && yarn test:lint && yarn test:queryByteLengths && yarn test:jest",
     "test:lint": "next lint",
